# Rustalink

./: .gitignore  Cargo.toml  README.md  audit_queue.md  build.rs  config.example.toml  rustfmt.toml
.github/workflows/: release.yml
docs/: astro.config.mjs  index.md  package.json
docs/.vitepress/: config.js
docs/.vitepress/theme/: index.js  style.css
docs/guide/: pterodactyl.md
docs/src/: index.md
docs/src/components/: CustomSocialIcons.astro
docs/src/guide/: api.md  architecture.md  configuration.md  docker.md  filters.md  installation.md
docs/src/style/: custom.css
src/: lib.rs  main.rs
src/audio/: constants.rs  error.rs  frame.rs  mod.rs  processor.rs
src/audio/buffer/: mod.rs  pool.rs  ring.rs
src/audio/codec/: opus_decoder.rs  opus_encoder.rs
src/audio/demux/: format.rs  mod.rs  webm_opus.rs
src/audio/effects/: crossfade.rs  fade.rs  mod.rs  tape.rs  volume.rs
src/audio/engine/: encoder.rs  mod.rs  passthrough.rs  standard.rs  transcode.rs
src/audio/filters/: biquad.rs  channel_mix.rs  chorus.rs  compressor.rs  delay_line.rs  distortion.rs  echo.rs  equalizer.rs  flanger.rs  high_pass.rs  karaoke.rs  lfo.rs  low_pass.rs  mod.rs  normalization.rs  phaser.rs  phonograph.rs  reverb.rs  rotation.rs  spatial.rs  timescale.rs  tremolo.rs  vibrato.rs  volume.rs
src/audio/flow/: controller.rs
src/audio/mix/: layer.rs  mixer.rs
src/audio/playback/: handle.rs  mod.rs  stuck_detector.rs
src/audio/resample/: hermite.rs  linear.rs  mod.rs  sinc.rs
src/audio/source/: client.rs  mod.rs  segmented.rs  traits.rs
src/common/: banner.rs  errors.rs  http.rs  types.rs  utils.rs
src/common/logger/: mod.rs  (+2 more)
src/config/: filters.rs  lyrics.rs  mod.rs  player.rs  server.rs
src/gateway/: constants.rs  encryption.rs  engine.rs  mod.rs  udp_link.rs
src/lyrics/: deezer.rs  genius.rs  letrasmus.rs  mod.rs  musixmatch.rs  utils.rs  yandex.rs  youtubemusic.rs
src/monitoring/: prometheus.rs  stats_collector.rs
src/player/: context.rs  state.rs
src/protocol/: events.rs  info.rs  mod.rs  opcodes.rs  routeplanner.rs  session.rs  stats.rs  tracks.rs
src/rest/: middleware.rs  mod.rs
src/routeplanner/: mod.rs
src/server/: app_state.rs  session.rs  voice.rs
src/sources/: manager.rs  mod.rs  playable_track.rs  plugin.rs
src/ws/: handler.rs  mod.rs
(+199 files in other folders)
